@@ -1,3 +1,5 @@
+	* fix python binding for external_ip_alert
+
 0.16.14 release
 
 	* make lt_tex more robust against bugs and malicious behavior
